--- a/js/projects.json
+++ b/js/projects.json
@@ -2,163 +2,229 @@
   {
     "year": "2024",
     "title": "MDEM Website Viewer Development",
-    "description": "Designed and developed a statewide Cadastral and Flood Web GIS Viewer for real-time access to geospatial data for Mississippi.",
+    "description": "Statewide Mississippi – Web GIS Developer. Designed and developed a statewide Cadastral and Flood Web GIS Viewer for real-time access to geospatial data.",
+    "fullDetails": [
+      "Built interactive mapping functionalities using ArcGIS JavaScript API, integrated Enterprise Geodatabase, and streamlined ArcGIS services.",
+      "Incorporated live data feeds from FEMA and state agencies for situational awareness.",
+      "Led testing, optimization, and conducted training for MDEM staff."
+    ],
     "tools": ["ArcGIS JS API", "Enterprise Geodatabase", "FEMA Data"],
     "role": "Web GIS Developer"
   },
   {
     "year": "2024",
     "title": "MDEM: Mississippi Contour Development (1ft & 2ft)",
-    "description": "Managed creation of high-resolution topographic datasets and oversaw automated quality control validation.",
+    "description": "Project Lead for high-resolution contour dataset creation and topographic analysis.",
+    "fullDetails": [
+      "Managed creation of high-resolution 1ft & 2ft contour datasets.",
+      "Applied advanced GIS techniques for precise topographic analysis.",
+      "Oversaw quality control through automated validation and manual inspections.",
+      "Coordinated team and stakeholder efforts for timely data delivery."
+    ],
     "tools": ["Topographic Analysis", "Automated QA/QC", "Lidar"],
     "role": "Project Lead"
   },
   {
     "year": "2024",
-    "title": "MDEM: Elevation Derived Hydrography (EDH)",
-    "description": "Coordinated hydrographic feature extraction using elevation data and integrated manual/automated QC checks.",
+    "title": "MDEM: Elevation Derived Hydrography Dataset (EDH)",
+    "description": "Project Coordinator for hydrographic feature extraction and QA/QC management.",
+    "fullDetails": [
+      "Coordinated hydrographic feature extraction using elevation data.",
+      "Led QA/QC efforts, integrating automated and manual checks.",
+      "Managed timelines, stakeholder communication, and team collaboration."
+    ],
     "tools": ["EDH", "Hydrography", "Elevation Data"],
     "role": "Project Coordinator"
   },
   {
     "year": "2024",
     "title": "Watershed Planning Project, Mississippi",
-    "description": "Developed public-facing Hub sites and Stormwater Management programs for Bolivar and Sunflower Counties.",
+    "description": "Web GIS Developer for public-facing hydrologic data visualization and stormwater management programs.",
+    "fullDetails": [
+      "Developed a public-facing website using ArcGIS Online, Hub, HTML, CSS, and Bootstrap to display hydrologic data.",
+      "Integrated communication tools for announcements, resource sharing, and public feedback.",
+      "Contributed to development of a Comprehensive Watershed-Based Stormwater Management Program for Bolivar and Sunflower Counties."
+    ],
     "tools": ["ArcGIS Hub", "HTML/CSS", "Bootstrap"],
     "role": "Web GIS Developer"
   },
   {
     "year": "2023",
-    "title": "Stormwater Assessment & Management",
-    "description": "Developed automated impervious surface extraction tools for fee calculation in Rankin & Madison County.",
+    "title": "Stormwater Assessment and Management",
+    "description": "GIS Consultant for automated impervious surface extraction and stormwater fee calculation.",
+    "fullDetails": [
+      "Developed automated impervious surface extraction for stormwater fee calculation.",
+      "Created custom ArcGIS tool, authored technical and user documentation.",
+      "Built a web application using ArcGIS WebApp Builder for stakeholder access."
+    ],
     "tools": ["Python", "ArcGIS Tool Development", "WebApp Builder"],
     "role": "GIS Consultant"
   },
   {
     "year": "2023",
-    "title": "Town of Sardis & Crawford Utility GIS",
-    "description": "Managed utility geodatabases, created custom map books, and deployed mobile field survey applications.",
+    "title": "Town of Sardis & Crawford, Mississippi",
+    "description": "GIS Consultant for utility geodatabase management and field survey applications.",
+    "fullDetails": [
+      "Designed, developed, and managed utility geodatabases.",
+      "Created map book series with custom symbology and labeling.",
+      "Developed field survey data collection application using ArcGIS Online with ongoing technical support."
+    ],
     "tools": ["Geodatabase Design", "ArcGIS Online", "Field Maps"],
     "role": "GIS Consultant"
   },
   {
     "year": "2022",
-    "title": "Water Treatment Plant Site Investigation",
-    "description": "Developed workflow and dashboards for tracking water treatment issues and digital survey collection.",
+    "title": "Water Treatment Plant Site Investigation Application",
+    "description": "Web GIS Developer for water treatment issue tracking and workflow optimization.",
+    "fullDetails": [
+      "Developed workflow and dashboard for tracking water treatment issues.",
+      "Integrated digital survey forms for efficient data collection.",
+      "Optimized workflow for project tracking and reporting."
+    ],
     "tools": ["Dashboards", "Survey123", "Workflow Optimization"],
     "role": "Web GIS Developer"
   },
   {
     "year": "2022",
-    "title": "DeSoto County Rural Broadband Program",
-    "description": "Designed GIS databases to track broadband service locations and field survey status.",
+    "title": "DeSoto County Rural Broadband Connectivity Program",
+    "description": "GIS Developer for broadband service location databases and field survey tracking.",
+    "fullDetails": [
+      "Designed and maintained GIS databases for broadband service locations.",
+      "Converted datasets into GIS-compatible layers and published via ArcGIS Online/Server.",
+      "Developed dashboard to track field surveys and project status."
+    ],
     "tools": ["ArcGIS Server", "Online Dashboards", "Database Design"],
     "role": "GIS Developer"
   },
   {
     "year": "2022",
-    "title": "City of Meridian Public Works Automation",
-    "description": "Automated CAD-to-GIS conversion and sewer network modeling with digital monitoring dashboards.",
-    "tools": ["CAD Integration", "Sewer Network Modeling", "Automation"],
+    "title": "Public Works Department, City of Meridian",
+    "description": "GIS Specialist for CAD-to-GIS automation and sewer network modeling.",
+    "fullDetails": [
+      "Automated CAD-to-GIS conversion, spatial data QC, and sewer network modeling.",
+      "Developed digital survey forms for mobile/web platforms and dashboards for monitoring data and project status."
+    ],
+    "tools": ["CAD Integration", "Sewer Modeling", "Automation"],
     "role": "GIS Specialist"
   },
   {
     "year": "2021",
     "title": "MDEM: National Hydrography Dataset (NHD)",
-    "description": "Designed geodatabases and developed ArcPy tools to automate stream extraction for Mississippi.",
+    "description": "GIS Developer for geodatabase design and automated stream extraction.",
+    "fullDetails": [
+      "Designed geodatabase, processed and analyzed streams/waterbodies.",
+      "Performed spatial QC/QA and developed tools to automate stream extraction."
+    ],
     "tools": ["ArcPy", "NHD", "Spatial QC"],
     "role": "GIS Developer"
   },
   {
     "year": "2021",
     "title": "Machine Learning Vegetation Classification",
-    "description": "Applied SVM and Random Forest classification to UAS multispectral imagery with 90% accuracy.",
+    "description": "Research Scientist applying SVM and Random Forest classification to UAS imagery.",
+    "fullDetails": [
+      "Collected UAV imagery and generated orthomosaic multispectral maps.",
+      "Applied SVM and Random Forest classification to vegetation and land use.",
+      "Achieved 90% overall classification accuracy (Confusion Matrix)."
+    ],
     "tools": ["Machine Learning", "SVM", "Random Forest", "UAS"],
     "role": "Research Scientist"
   },
   {
     "year": "2020",
     "title": "3D Shoreline Change Detection (JILONA)",
-    "description": "Developed Python scripts for linear regression analysis of shoreline change (1953–2020) using UAV imagery.",
+    "description": "Geospatial Analyst performing shoreline change detection after Hurricane Irma.",
+    "fullDetails": [
+      "Extracted shoreline, coastline, and vegetation boundaries from UAV imagery.",
+      "Developed Python script for linear regression analysis to derive long- and short-term shoreline change rates (1953–2020).",
+      "Computed 2D distance changes and 3D volume erosion/accretion."
+    ],
     "tools": ["Python", "Change Detection", "UAV", "Geostatistics"],
     "role": "Geospatial Analyst"
   },
   {
     "year": "2020",
-    "title": "Watershed Master Plan (Florida)",
-    "description": "Created groundwater layers and probability flood inundation maps using CASCADE modeling.",
+    "title": "Watershed Master Plan, Florida State",
+    "description": "Remote Sensing & GIS Researcher for groundwater modeling and flood inundation mapping.",
+    "fullDetails": [
+      "Collected and integrated well data to create groundwater layers.",
+      "Applied overlay analysis to derive raster layers for flood modeling using CASCADE.",
+      "Developed Probability of Flood Inundation Maps; ensured quality against FEMA maps."
+    ],
     "tools": ["Remote Sensing", "CASCADE", "Flood Modeling"],
     "role": "Remote Sensing & GIS Researcher"
   },
   {
     "year": "2020",
-    "title": "Find Nearby Places (PostGIS)",
-    "description": "Built a PostgreSQL/PostGIS database to perform spatial proximity queries and QGIS visualization.",
+    "title": "Find Nearby Places",
+    "description": "GIS Developer for PostgreSQL/PostGIS spatial querying and QGIS visualization.",
+    "fullDetails": [
+      "Built PostgreSQL/PostGIS database to query locations within a mile.",
+      "Developed maps in QGIS to visualize queried locations."
+    ],
     "tools": ["PostgreSQL", "PostGIS", "QGIS"],
     "role": "GIS Developer"
   },
   {
     "year": "2020",
     "title": "Crime Hotspot Analysis",
-    "description": "Developed web applications to calculate crime densities and generate hotspot/cold spot maps.",
+    "description": "GIS Developer for crime data aggregation and hotspot map publishing.",
+    "fullDetails": [
+      "Developed web application with ArcGIS JS API, HTML, CSS.",
+      "Aggregated crime data, calculated densities, generated hotspot/cold spot maps, and published web layers."
+    ],
     "tools": ["ArcGIS JS API", "Spatial Statistics", "Web Maps"],
     "role": "GIS Developer"
   },
   {
     "year": "2019",
-    "title": "High Speed 2 (HS2) Rail Project",
-    "description": "Integrated and automated large-scale railway data processing for the HS2 project.",
+    "title": "High Speed 2 Rail Project",
+    "description": "GIS Specialist for railway data integration and workflow automation.",
     "fullDetails": [
-      "Extracted, preprocessed, and integrated raw data from Excel into spatial feature classes.",
-      "Automated complex data processing workflows using ArcGIS Model Builder and custom Python scripts."
+      "Extracted, preprocessed, and integrated data from Excel into feature classes.",
+      "Automated workflows with Model Builder and Python scripts."
     ],
-    "tools": ["Model Builder", "Python", "ArcGIS Desktop", "Excel Integration"],
+    "tools": ["Model Builder", "Python", "Data Integration"],
     "role": "GIS Specialist"
   },
   {
     "year": "2019",
-    "title": "Transportation Planning Network Analysis",
-    "description": "Conducted advanced route analysis and network modeling for transportation infrastructure.",
+    "title": "Transportation Planning",
+    "description": "GIS Specialist for network analysis and spatial attribute extraction.",
     "fullDetails": [
-      "Converted nodes and links into functional GIS layers using automated Model Builder workflows.",
-      "Conducted Origin-Destination (O-D) route analysis with Network Analyst.",
-      "Applied spatial restrictions and extracted detailed spatial attributes for planning reports."
+      "Converted nodes/links into GIS layers using Model Builder.",
+      "Conducted Origin-Destination route analysis with Network Analyst, applied restrictions, and extracted spatial attributes."
     ],
-    "tools": ["Network Analyst", "Model Builder", "Spatial Analysis"],
+    "tools": ["Network Analyst", "Route Analysis", "Spatial Attributes"],
     "role": "GIS Specialist"
   },
   {
     "year": "2018",
-    "title": "TPUP & Port of Liverpool: RIP Scheme",
-    "description": "Supported road improvement programs through automated land referencing and web GIS deployment.",
+    "title": "TPUP & Port of Liverpool, RIP Scheme",
+    "description": "GIS Analyst for road improvement program land referencing and web mapping.",
     "fullDetails": [
-      "Processed OpenStreetMap (OSM) data and designed Model Builder tools for land referencing.",
-      "Automated labeling, numbering, and map documentation workflows.",
-      "Created MXD files, published map services, and developed interactive web apps for stakeholder decision-making."
+      "Processed OSM data, designed Model Builder tools for land referencing, labeling, numbering, and map documentation.",
+      "Created MXD, published as service, and developed web maps/apps for client decision-making."
     ],
-    "tools": ["OSM Data", "ArcGIS Server", "Web App Builder", "Python"],
+    "tools": ["OSM Data", "Land Referencing", "Web Apps"],
     "role": "GIS Analyst"
   },
   {
     "year": "2018",
-    "title": "Wessex CP6 Asset Management",
-    "description": "Streamlined asset mapping and map production for regional infrastructure management.",
+    "title": "Wessex CP6",
+    "description": "GIS Specialist for asset mapping and automated map production.",
     "fullDetails": [
-      "Managed critical locational data and collected comprehensive base maps.",
-      "Automated large-scale map production using Jupyter/Python notebooks.",
-      "Utilized ArcGIS Collector App for field data synchronization and accuracy."
+      "Managed locational data, collected base maps, automated map production with Python notebooks, and used Collector App."
     ],
-    "tools": ["Python Notebooks", "ArcGIS Collector", "Field Data Collection"],
+    "tools": ["Python Notebooks", "Collector App", "Asset Mapping"],
     "role": "GIS Specialist"
   },
   {
     "year": "2018",
     "title": "Skip Pool Improvement Scheme",
-    "description": "Produced specialized geological and hydrological maps for infrastructure planning.",
+    "description": "GIS Specialist for geological and groundwater flooding risk mapping.",
     "fullDetails": [
-      "Successfully migrated A585 spatial layers into a centralized GIS environment.",
-      "Produced detailed geological maps for superficial deposits and aquifers.",
-      "Mapped groundwater flooding risks to inform site safety and engineering."
+      "Migrated A585 layer, produced geological maps for superficial deposits, aquifers, and groundwater flooding."
     ],
     "tools": ["Geological Mapping", "Hydrology", "Data Migration"],
     "role": "GIS Mapping"
@@ -166,37 +232,31 @@
   {
     "year": "2015",
     "title": "West Bengal Minor Irrigation Project",
-    "description": "Performed decade-long remote sensing analysis for agricultural resource management.",
+    "description": "Remote Sensing Analyst for long-term LULC classification and yield estimation.",
     "fullDetails": [
-      "Conducted advanced digital image analysis on multi-temporal satellite data.",
-      "Developed 10+ years of Land Use/Land Cover (LULC) and crop classification maps.",
-      "Performed change detection analysis and estimated agricultural yields."
+      "Conducted digital image analysis, developed 10+ years of LULC and crop classification, performed change detection, and estimated yields."
     ],
-    "tools": ["Remote Sensing", "Digital Image Processing", "LULC", "Change Detection"],
+    "tools": ["LULC", "Change Detection", "Satellite Imagery"],
     "role": "Remote Sensing Analyst"
   },
   {
     "year": "2015",
-    "title": "Mining Area Environmental Impact Assessment",
-    "description": "Analyzed environmental degradation and spatial coverage of mining regions.",
+    "title": "Environmental Impact Assessment of Mining Area",
+    "description": "Remote Sensing Analyst mapping mining spatial coverage and ecological impact.",
     "fullDetails": [
-      "Processed LISS-4 satellite data to monitor environmental changes.",
-      "Mapped land use/land cover specifically within mining impact zones.",
-      "Calculated spatial coverage of mining activities and visualized affected ecological regions."
+      "Processed LISS-4 satellite data, mapped land use/land cover, calculated mining spatial coverage, and visualized affected regions."
     ],
-    "tools": ["LISS-4", "EIA", "Satellite Processing", "Visualization"],
+    "tools": ["LISS-4", "EIA", "Satellite Processing"],
     "role": "Remote Sensing Analyst"
   },
   {
     "year": "2014",
-    "title": "Texture-Driven Regional Data Analysis",
-    "description": "Research-focused regional analysis using advanced image segmentation and machine learning.",
+    "title": "Texture Driven Regional Based Data Analysis",
+    "description": "Remote Sensing Analyst applying image segmentation and SVM classification.",
     "fullDetails": [
-      "Designed and implemented complex image segmentation techniques for urban analysis.",
-      "Applied Support Vector Machine (SVM) classification to high-resolution imagery.",
-      "Performed post-classification change detection in South Chennai to identify urban growth patterns."
+      "Designed image segmentation techniques, applied SVM classification, and performed post-classification change detection in South Chennai."
     ],
-    "tools": ["Image Segmentation", "SVM", "Machine Learning", "South Chennai Data"],
+    "tools": ["Image Segmentation", "SVM", "Remote Sensing"],
     "role": "Remote Sensing Analyst"
   }
 ]
